[package]
name = "rust-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1"
chrono = "0.4"
clap = "2"
piston2d-graphics = "0.39"
piston_window = "0.117"
rand = "0.8"
regex = "1.7.1"
reqwest = "0.9"
serde = "1"
serde_cbor = "0.8"
serde_derive = "1"
serde_json = "1"
toml = "0.4"
trust-dns = { version = "0.16", default-features = false }
